// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> snapshot should match snapshot 1`] = `
<div>
  <button>
    Click Me!
  </button>
</div>
`;

exports[`<Popover /> snapshot should match snapshot 2`] = `
<div>
  <button
    aria-describedby="tippy-1"
  >
    Click Me!
  </button>
  <div
    data-tippy-root=""
    id="tippy-1"
    style="pointer-events: none; z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; bottom: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="top"
      data-round="50"
    >
      <p>
        Content
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          class="md-modal-arrow-svg"
          data-placement="top"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-top"
            >
              <path
                d="m 24 0 l -10 10 q -2 2 -4 0 l -10 -10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-top)"
            d="m 24 0 l -10 10 q -2 2 -4 0 l -10 -10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Popover /> snapshot should match snapshot with className 1`] = `
<div>
  <button>
    Click Me!
  </button>
</div>
`;

exports[`<Popover /> snapshot should match snapshot with className 2`] = `
<div>
  <button
    aria-describedby="tippy-2"
  >
    Click Me!
  </button>
  <div
    data-tippy-root=""
    id="tippy-2"
    style="pointer-events: none; z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; bottom: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="example-class md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="top"
      data-round="50"
    >
      <p>
        Content
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          class="md-modal-arrow-svg"
          data-placement="top"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-top"
            >
              <path
                d="m 24 0 l -10 10 q -2 2 -4 0 l -10 -10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-top)"
            d="m 24 0 l -10 10 q -2 2 -4 0 l -10 -10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Popover /> snapshot should match snapshot with closeButtonPlacement 1`] = `
<div>
  <button>
    Click Me!
  </button>
</div>
`;

exports[`<Popover /> snapshot should match snapshot with closeButtonPlacement 2`] = `
<div>
  <button
    aria-describedby="tippy-6"
  >
    Click Me!
  </button>
  <div
    data-tippy-root=""
    id="tippy-6"
    style="pointer-events: none; z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; bottom: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="top"
      data-round="50"
    >
      <button
        aria-pressed="false"
        class="md-button-circle-wrapper md-popover-close-button md-button-simple-wrapper"
        data-color="primary"
        data-disabled="false"
        data-ghost="true"
        data-multiple-children="false"
        data-outline="false"
        data-placement="top-right"
        data-selected="false"
        data-size="20"
        type="button"
      >
        <div
          class="md-icon-wrapper"
        >
          <svg
            class=""
            data-autoscale="false"
            data-scale="16"
            data-test="cancel"
            fill="currentColor"
            height="100%"
            viewBox="0, 0, 32, 32"
            width="100%"
          />
        </div>
      </button>
      <p>
        Content
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          class="md-modal-arrow-svg"
          data-placement="top"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-top"
            >
              <path
                d="m 24 0 l -10 10 q -2 2 -4 0 l -10 -10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-top)"
            d="m 24 0 l -10 10 q -2 2 -4 0 l -10 -10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Popover /> snapshot should match snapshot with color 1`] = `
<div>
  <button>
    Click Me!
  </button>
</div>
`;

exports[`<Popover /> snapshot should match snapshot with color 2`] = `
<div>
  <button
    aria-describedby="tippy-5"
  >
    Click Me!
  </button>
  <div
    data-tippy-root=""
    id="tippy-5"
    style="pointer-events: none; z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; bottom: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="tertiary"
      data-elevation="3"
      data-padded="true"
      data-placement="top"
      data-round="50"
    >
      <p>
        Content
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          class="md-modal-arrow-svg"
          data-placement="top"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-top"
            >
              <path
                d="m 24 0 l -10 10 q -2 2 -4 0 l -10 -10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-top)"
            d="m 24 0 l -10 10 q -2 2 -4 0 l -10 -10"
            data-color="tertiary"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Popover /> snapshot should match snapshot with id 1`] = `
<div>
  <button>
    Click Me!
  </button>
</div>
`;

exports[`<Popover /> snapshot should match snapshot with id 2`] = `
<div>
  <button
    aria-describedby="tippy-3"
  >
    Click Me!
  </button>
  <div
    data-tippy-root=""
    id="tippy-3"
    style="pointer-events: none; z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; bottom: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="top"
      data-round="50"
      id="example-id"
    >
      <p>
        Content
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          class="md-modal-arrow-svg"
          data-placement="top"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-top"
            >
              <path
                d="m 24 0 l -10 10 q -2 2 -4 0 l -10 -10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-top)"
            d="m 24 0 l -10 10 q -2 2 -4 0 l -10 -10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Popover /> snapshot should match snapshot with style 1`] = `
<div>
  <button>
    Click Me!
  </button>
</div>
`;

exports[`<Popover /> snapshot should match snapshot with style 2`] = `
<div>
  <button
    aria-describedby="tippy-4"
  >
    Click Me!
  </button>
  <div
    data-tippy-root=""
    id="tippy-4"
    style="pointer-events: none; z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; bottom: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="md-modal-container-wrapper"
      data-arrow-orientation="vertical"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="top"
      data-round="50"
      style="color: pink;"
    >
      <p>
        Content
      </p>
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow"
        style="position: absolute; left: 0px; transform: translate(5px, 0px);"
      >
        <svg
          class="md-modal-arrow-svg"
          data-placement="top"
          height="12"
          viewBox="0 0 24 12"
          width="24"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-top"
            >
              <path
                d="m 24 0 l -10 10 q -2 2 -4 0 l -10 -10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-top)"
            d="m 24 0 l -10 10 q -2 2 -4 0 l -10 -10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
